@@ -212,14 +212,26 @@ static void register_stuff(const AFPObj *obj) {
 
     port = atoi(obj->options.port);
 
-    if (convert_string(obj->options.unixcharset,
-                       CH_UTF8,
-                       obj->options.hostname,
-                       -1,
-                       name,
-                       MAXINSTANCENAMELEN) <= 0) {
-        LOG(log_error, logtype_afpd, "Could not set Zeroconf instance name");
-        goto fail;
+    if (obj->options.zeroconfname) {
+        if (convert_string(obj->options.unixcharset,
+                            CH_UTF8,
+                            obj->options.zeroconfname,
+                            -1,
+                            name,
+                            MAXINSTANCENAMELEN) <= 0) {
+            LOG(log_error, logtype_afpd, "Could not set Zeroconf instance name: %s", obj->options.zeroconfname);
+            goto fail;
+        }
+    } else {
+        if (convert_string(obj->options.unixcharset,
+                           CH_UTF8,
+                           obj->options.hostname,
+                           -1,
+                           name,
+                           MAXINSTANCENAMELEN) <= 0) {
+            LOG(log_error, logtype_afpd, "Could not set Zeroconf instance name: %s", obj->options.hostname);
+            goto fail;
+        }
     }
 
     error = DNSServiceRegister(&svc_refs[svc_ref_count++],
