@@ -1,5 +1,6 @@
 Changes in 3.1.11
 ================
+* NEW: Global option "zeroconf name", FR#99
 
 Changes in 3.1.10
 ================
